Chrome OS: Fix and re-enable OobeLocalizationTest

This is re-land of the https://chromium-review.googlesource.com/c/1355045
with more tests fixed.

Bug: 633246
Change-Id: I6c889b863858a0a364a05ffcfc4d2a2dda00194d
Reviewed-on: https://chromium-review.googlesource.com/c/1362476
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614112}