chrome/browser/chromeos/login/ui/login_display_host_webui.cc
@@ -1085,7 +1085,7 @@ void LoginDisplayHostWebUI::CreateExistingUserController() {
 
 // static
 void LoginDisplayHostWebUI::DisableRestrictiveProxyCheckForTest() {
-  if (default_host()->GetOobeUI()) {
+  if (default_host() && default_host()->GetOobeUI()) {
     default_host()
         ->GetOobeUI()
         ->GetGaiaScreenView()
