chrome/browser/chromeos/login/oobe_localization_browsertest.cc
@@ -48,8 +48,13 @@ namespace {
 const int kTimeoutSeconds = 2;
 
 // OOBE constants.
-const char kLocaleSelect[] = "language-select";
-const char kKeyboardSelect[] = "keyboard-select";
+const char kLanguageSelect[] = "languageSelect";
+const char kKeyboardSelect[] = "keyboardSelect";
+
+std::string GetGetSelectStatement(const std::string& selectId) {
+  return "document.getElementById('oobe-welcome-md').$." + selectId +
+         ".$.select";
+}
 
 const char kUSLayout[] = "xkb:us::eng";
 class TimedRunLoop {
@@ -168,23 +173,21 @@ struct LocalizationTestParams {
 
     {"ru,de", "xkb:ru::rus", "ru,de", kUSLayout, "xkb:us::eng"},
 
-    // TODO(alemate/michaelpg): Figure out why these tests are failing
-    // and re-enable them. crbug.com/422702.
     // ------------------ Regional Locales
     // Syntetic example to test correct merging of different locales.
-    // {"fr-CH,it-CH,de-CH",
-    //  "xkb:fr::fra,xkb:it::ita,xkb:de::ger",
-    //  "fr-CH,it-CH,de-CH",
-    //  "xkb:fr::fra",
-    //  "xkb:fr::fra,xkb:it::ita,xkb:de::ger,[xkb:be::fra,xkb:ca::fra,"
-    //      "xkb:ch:fr:fra,xkb:ca:multix:fra,xkb:us::eng]"},
+    {"fr-CH,it-CH,de-CH",
+     "xkb:fr::fra,xkb:it::ita,xkb:de::ger",
+     "fr-CH,it-CH,de-CH",
+     "xkb:fr::fra",
+     "xkb:fr::fra,xkb:it::ita,xkb:de::ger,[xkb:be::fra,xkb:ca::fra,"
+         "xkb:ch:fr:fra,xkb:ca:multix:fra,xkb:us::eng]"},
 
     // Another syntetic example. Check that british keyboard is available.
-    // {"en-AU",
-    //  "xkb:us::eng",
-    //  "en-AU",
-    //  "xkb:us::eng",
-    //  "xkb:us::eng,[xkb:gb:extd:eng,xkb:gb:dvorak:eng]"},
+    {"en-AU",
+     "xkb:us::eng",
+     "en-AU",
+     "xkb:us::eng",
+     "xkb:us::eng,[xkb:gb:extd:eng,xkb:gb:dvorak:eng]"},
 };
 
 class OobeLocalizationTest
@@ -248,11 +251,11 @@ bool OobeLocalizationTest::VerifyInitialOptions(const char* select_id,
                                                 bool check_separator) {
   const std::string expression = base::StringPrintf(
       "(function () {\n"
-      "  var select = document.querySelector('#%s');\n"
+      "  let select = %s;\n"
       "  if (!select)\n"
       "    return false;\n"
-      "  var values = '%s'.split(',');\n"
-      "  var correct = select.selectedIndex == 0;\n"
+      "  let values = '%s'.split(',');\n"
+      "  let correct = select.selectedIndex == 0;\n"
       "  for (var i = 0; i < values.length && correct; i++) {\n"
       "    if (select.options[i].value != values[i])\n"
       "      correct = false;\n"
@@ -261,7 +264,7 @@ bool OobeLocalizationTest::VerifyInitialOptions(const char* select_id,
       "    correct = select.children[values.length].tagName === 'OPTGROUP';\n"
       "  return correct;\n"
       "})()",
-      select_id, values, check_separator);
+      GetGetSelectStatement(select_id).c_str(), values, check_separator);
   const bool execute_status = checker.GetBool(expression);
   EXPECT_TRUE(execute_status) << expression;
   return execute_status;
@@ -271,7 +274,7 @@ bool OobeLocalizationTest::VerifyOptionExists(const char* select_id,
                                               const char* value) {
   const std::string expression = base::StringPrintf(
       "(function () {\n"
-      "  var select = document.querySelector('#%s');\n"
+      "  var select = %s;\n"
       "  if (!select)\n"
       "    return false;\n"
       "  for (var i = 0; i < select.options.length; i++) {\n"
@@ -280,7 +283,7 @@ bool OobeLocalizationTest::VerifyOptionExists(const char* select_id,
       "  }\n"
       "  return false;\n"
       "})()",
-      select_id, value);
+      GetGetSelectStatement(select_id).c_str(), value);
   const bool execute_status = checker.GetBool(expression);
   EXPECT_TRUE(execute_status) << expression;
   return execute_status;
@@ -288,13 +291,11 @@ bool OobeLocalizationTest::VerifyOptionExists(const char* select_id,
 
 std::string OobeLocalizationTest::DumpOptions(const char* select_id) {
   const std::string expression = base::StringPrintf(
-      "\n"
       "(function () {\n"
-      "  var selector = '#%s';\n"
+      "  var select = %s;\n"
       "  var divider = ',';\n"
-      "  var select = document.querySelector(selector);\n"
       "  if (!select)\n"
-      "    return 'document.querySelector(' + selector + ') failed.';\n"
+      "    return 'select statement for \"%s\" failed.';\n"
       "  var dumpOptgroup = function(group) {\n"
       "    var result = '';\n"
       "    for (var i = 0; i < group.children.length; i++) {\n"
@@ -330,7 +331,7 @@ std::string OobeLocalizationTest::DumpOptions(const char* select_id) {
       "  }\n"
       "  return result;\n"
       "})()\n",
-      select_id);
+      GetGetSelectStatement(select_id).c_str(), select_id);
   return checker.GetString(expression);
 }
 
@@ -367,10 +368,11 @@ void OobeLocalizationTest::RunLocalizationTest() {
   const std::string first_language =
       expected_locale.substr(0, expected_locale.find(','));
   bool done = false;
+  const std::string get_select_statement =
+      GetGetSelectStatement(kLanguageSelect);
   const std::string waiting_script = base::StringPrintf(
-      "var screenElement = document.getElementById('language-select');"
       "function SendReplyIfAcceptEnabled() {"
-      "  if ($('language-select').value != '%s')"
+      "  if (%s.value != '%s')"
       "    return false;"
       "  domAutomationController.send(true);"
       "  observer.disconnect();"
@@ -378,10 +380,11 @@ void OobeLocalizationTest::RunLocalizationTest() {
       "}"
       "var observer = new MutationObserver(SendReplyIfAcceptEnabled);"
       "if (!SendReplyIfAcceptEnabled()) {"
-      "  var options = { attributes: true };"
-      "  observer.observe(screenElement, options);"
+      "  let options = { attributes: true };"
+      "  observer.observe(%s, options);"
       "}",
-      first_language.c_str());
+      get_select_statement.c_str(), first_language.c_str(),
+      get_select_statement.c_str());
 
   ASSERT_TRUE(content::ExecuteScriptAndExtractBool(
       LoginDisplayHost::default_host()->GetOobeUI()->web_ui()->GetWebContents(),
@@ -392,15 +395,17 @@ void OobeLocalizationTest::RunLocalizationTest() {
                                ->web_ui()
                                ->GetWebContents());
 
-  if (!VerifyInitialOptions(kLocaleSelect, expected_locale.c_str(), true)) {
-    LOG(ERROR) << "Actual value of " << kLocaleSelect << ":\n"
-               << DumpOptions(kLocaleSelect);
+  if (!VerifyInitialOptions(kLanguageSelect, expected_locale.c_str(), true)) {
+    LOG(ERROR) << "Actual value of " << kLanguageSelect << ":\n"
+               << DumpOptions(kLanguageSelect);
+    EXPECT_TRUE(false);
   }
   if (!VerifyInitialOptions(
           kKeyboardSelect,
           TranslateXKB2Extension(expected_keyboard_layout).c_str(), false)) {
     LOG(ERROR) << "Actual value of " << kKeyboardSelect << ":\n"
                << DumpOptions(kKeyboardSelect);
+    EXPECT_TRUE(false);
   }
 
   // Make sure we have a fallback keyboard.
@@ -409,6 +414,7 @@ void OobeLocalizationTest::RunLocalizationTest() {
           extension_ime_util::GetInputMethodIDByEngineID(kUSLayout).c_str())) {
     LOG(ERROR) << "Actual value of " << kKeyboardSelect << ":\n"
                << DumpOptions(kKeyboardSelect);
+    EXPECT_TRUE(false);
   }
 
   // Note, that sort order is locale-specific, but is unlikely to change.
@@ -424,7 +430,7 @@ void OobeLocalizationTest::RunLocalizationTest() {
       language::prefs::kApplicationLocale, std::string());
 }
 
-IN_PROC_BROWSER_TEST_P(OobeLocalizationTest, DISABLED_LocalizationTest) {
+IN_PROC_BROWSER_TEST_P(OobeLocalizationTest, LocalizationTest) {
   RunLocalizationTest();
 }
 
